// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bash set to false does not render $ sign 1`] = `
.c2 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #000000;
  background: #9F85FF;
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c2:hover,
.c2:focus {
  background: #B29DFF;
}

.c2:active {
  background: #C5B6FF;
}

.c2:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c0 {
  box-sizing: border-box;
  padding: 8px;
  color: #FFFFFF;
  background-color: #010B1C;
  border-radius: 4px;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c1 {
  box-sizing: border-box;
  margin-right: 8px;
  display: flex;
}

<div>
  <div
    class="c0"
    color="light"
  >
    <div
      class="c1"
      style="word-break: break-all; font-size: 12px; font-family: \\"Droid Sans Mono\\", \\"monospace\\", monospace, \\"Droid Sans Fallback\\";"
    >
      <div>
        some text to be copied
      </div>
    </div>
    <button
      class="c2"
      kind="primary"
      style="max-width: 48px; width: 100%; padding: 4px 8px; min-height: 10px; font-size: 10px;"
    >
      Copy
    </button>
  </div>
</div>
`;

exports[`default, renders $ sign 1`] = `
.c2 {
  box-sizing: border-box;
  margin-right: 4px;
}

.c3 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #000000;
  background: #9F85FF;
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c3:hover,
.c3:focus {
  background: #B29DFF;
}

.c3:active {
  background: #C5B6FF;
}

.c3:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c0 {
  box-sizing: border-box;
  padding: 8px;
  color: #FFFFFF;
  background-color: #010B1C;
  border-radius: 4px;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c1 {
  box-sizing: border-box;
  margin-right: 8px;
  display: flex;
}

<div>
  <div
    class="c0"
    color="light"
  >
    <div
      class="c1"
      style="overflow: auto; white-space: pre; word-break: break-all; font-size: 12px; font-family: \\"Droid Sans Mono\\", \\"monospace\\", monospace, \\"Droid Sans Fallback\\";"
    >
      <div
        class="c2"
        style="user-select: none;"
      >
        $
      </div>
      <div>
        some bash command
      </div>
    </div>
    <button
      class="c3"
      kind="primary"
      style="max-width: 48px; width: 100%; padding: 4px 8px; min-height: 10px; font-size: 10px;"
    >
      Copy
    </button>
  </div>
</div>
`;
